# gnn-crimes

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: black_lint.yml  formatter.yml
src/data/: create_spatio_temporal_grid.py  download_data.py  download_sf_data.py  plot_geopandas.py  process_data.py  process_full_sf_data.py
src/data/download/: download_elliptic_data.py  download_sp_data.py
src/data/load/: load_sp_data.py
src/data/process/: process_elliptic_data.py  process_sp_data.py
src/data/viz/: incident_proportion.py
src/models/Autoencoder/: Autoencoder.py
src/models/Cifar10CNN/: Cifar10CNN
src/models/IrisNet/: IrisNet.py
src/models/Perceptron/: Perceptron.py
src/models/RNN/: GRUSentimentAnalysis.py
src/models/STC-GNN/: Data_Container.py  Main.py  Metrics.py  Model_Trainer.py  STC_GNN.py
src/utils/: data_utils.py  test.py
src/visualization/: clustering.py  folium_map.py  map_visualization.py  plot_via_osmnx.py  regionalization.py
