[tool.poetry]
name = "gnn-crimes"
version = "0.1.0"
description = "Repository for our GNN-Crimes Project"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
numpy = "^1.26.3"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
