[tool.poetry]
name = "gnn-crimes"
version = "0.1.0"
description = "Repository for our GNN-Crimes Project"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
pyarrow = "^15.0.0"
plotly = "^5.18.0"
ipykernel = "^6.29.0"
geopandas = "^0.14.2"
wget = "^3.2"
gdown = "^5.1.0"
folium = "^0.15.1"
scikit-learn = "^1.4.1.post1"
types-requests = "^2.31.0.20240218"
networkx = "^3.2.1"
hydrobr = "^0.1.1"
osmnx = "^1.9.1"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
profile = "black"

[tool.flake8]
max-line-length = 120
max-complexity = 20
exclude = ".git"
select = "B,C,E,F,W,T4,B9"
ignore = "E203, E266, E501, W503, F403, F401"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
black = "^23.12.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
